# project_artistic

./: README.md  pyproject.toml
Mosaic/mosaic/: run.py
Mosaic/script/: main.py  run.py
